# MCP-Box

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  lambda.py  main.py  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: infra.yaml  server.yaml
docs/: INSTALL.md  SETUP.md
src/mcpbox/: __init__.py
src/mcpbox/cli/: __init__.py  main.py  utils.py
src/mcpbox/cli/commands/: __init__.py  init.py  inspect.py  pull.py  push.py  search.py
src/mcpbox/cli/scanners/: __init__.py  bandit.py  discovery.py  ggshield.py  sonarqube.py
src/mcpbox/server/: __init__.py  main.py
src/mcpbox/server/routes/: __init__.py  payment.py  servers.py
src/mcpbox/server/templates/: index.html
src/mcpbox/shared/: __init__.py  config.py  models.py  s3.py
src/superbox/: __init__.py
src/superbox/aws/: __init__.py  __main__.py  lambda.py  proxy.py
src/superbox/cli/: __init__.py  banner.txt  main.py
src/superbox/cli/commands/: __init__.py  auth.py  init.py  inspect.py  logs.py  pull.py  push.py  run.py  search.py  test.py
src/superbox/cli/scanners/: bandit.py  discovery.py  ggshield.py  sonarqube.py
src/superbox/server/: __init__.py  main.go  main.py
src/superbox/server/handlers/: auth.go  playground.go  servers.go
src/superbox/server/helpers/: security_helper.py
src/superbox/server/models/: types.go
src/superbox/server/routes/: __init__.py  auth.py  payment.py  servers.py
src/superbox/server/templates/: auth.html  index.html
src/superbox/shared/: __init__.py  config.py  s3.py
tests/: __init__.py
