[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superbox"
version = "1.0.0"
description = "Discover, deploy, and test MCPs in isolated sandboxes"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SuperBox Team"}
]
keywords = ["mcp", "fastapi", "gin", "docker", "cli", "security", "registry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-dotenv>=1.2.1",
    "boto3>=1.40.64",
    "pydantic>=2.12.3",
]

[project.optional-dependencies]
cli = [
    "click>=8.1.0,<8.2.0",
    "requests>=2.32.5",
    "bandit>=1.7.0",
    "ggshield>=1.14.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "pre-commit>=3.7.0",
]
all = [
    "superbox[cli,dev]"
]

[project.scripts]
superbox = "superbox.cli.main:main"

[project.urls]
Homepage = "https://github.com/areebahmeddd/superbox.ai"
Documentation = "https://github.com/areebahmeddd/superbox.ai#readme"
Repository = "https://github.com/areebahmeddd/superbox.ai"
Issues = "https://github.com/areebahmeddd/superbox.ai/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["superbox*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
